force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/AVR_Attachment_Validation_Rules__c.object-meta.xml
<CustomObject>
    <label>AVR Attachment Validation Rules</label>
    <nameField>
        <displayFormat>AVR-{0000}</displayFormat>
        <label>AVR No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>