force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <defaultValue>&quot;現在の状態ではこの操作を行えません。取り消し/却下してから操作して下さい。&quot; &amp; BR() &amp;
&quot;This operation can not be performed in the current state. Please cancel / reject it before operation.&quot;</defaultValue>
    <label>Error Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>