force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/fields/Excluded_Profile__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Profile__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>Name</inlineHelpText>
    <label>Excluded Profile</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>