force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/fields/Excluded_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Public_Group__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>DeveloperName</inlineHelpText>
    <label>Excluded Public Group</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>