force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/fields/Excluded_User__c.field-meta.xml
<CustomField>
    <fullName>Excluded_User__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <inlineHelpText>Username</inlineHelpText>
    <label>Excluded User</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>