force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/fields/SOQL_WHERE_Clause__c.field-meta.xml
<CustomField>
    <fullName>SOQL_WHERE_Clause__c</fullName>
    <label>SOQL WHERE Clause</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>