force-app/main/default/objects/AVR_Attachment_Validation_Rules__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>SObject__c</columns>
    <columns>SOQL_WHERE_Clause__c</columns>
    <columns>Excluded_Profile__c</columns>
    <columns>Excluded_Public_Group__c</columns>
    <columns>Excluded_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>ja</language>
</ListView>